--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -886,111 +886,7 @@
             callback();
         });
     }
-    function loadPatientPharmacy(patientID)
-    {
-        $.ajax({
-        type: 'POST',
-        url: '/SeeDoctor/GetPatientPharmacy',
-        data: { 'patientID': patientID },
-        dataType: 'json',
-        success: function (response) {
-            if (response.Message != undefined) {
-                console.log(response.Message);
-            }
-            else
-            {
-                if (response.Success == true) {
-
-                    if (response.Object != null) {
-                        
-                        $("#PharmacyID").val(response.Object.pharmacyid);
-                        $("#h2SelPharmacyName").html(response.Object.pharmacy);
-                        $("#pSelPharmacyAddress").html(response.Object.pharmacyaddress);
-                        $("#pSelPharmacyCityStateZip").html(response.Object.pharmacycitystatezip);
-
-                        $("#divPharmacyResultContainer").show();
-                    }
-                }
-            }
-
-            //else {response.Message;}
-
-            return false;
-        },
-        error: errorRes
-
-    });
-
-
-
-    }
-
-    function savePatientPharmacy()
-    {
-       
-        var objPharmacy={};
-        objPharmacy["patientID"]='@SessionHandler.UserInfo.Id';
-        objPharmacy["pharmacyid"]= $("#PharmacyID").val();
-        objPharmacy["pharmacy"]= $("#h2SelPharmacyName").html();
-        objPharmacy["pharmacyaddress"]=  $("#pSelPharmacyAddress").html();
-        objPharmacy["pharmacycitystatezip"]=  $("#pSelPharmacyCityStateZip").html();
-
-        $.ajax({
-            type: 'POST',
-            url: '/SeeDoctor/SavePatientPharmacy',
-            data: objPharmacy,
-            dataType: 'json',
-            success: function (response) {
-                if (response.Message != undefined) {
-                    new PNotify({
-                        title: 'Error',
-                        text: response.Message,
-                        type: 'error',
-                        styling: 'bootstrap3'
-                    });
-                }
-                else
-                {
-                    if (response.Success == true) {
-                        if (response.ApiResultModel.message != "") {
-                            new PNotify({
-                                title: 'Error',
-                                text: response.ApiResultModel.message,
-                                type: 'error',
-                                styling: 'bootstrap3'
-                            });
-                        }
-                        else if (response.ApiResultModel.message == "") {
-                            new PNotify({
-                                title: 'Success',
-                                text: "Pharmacy is saved successfully.",
-                                type: 'info',addclass: 'dark',
-                                styling: 'bootstrap3'
-                            });
-                        }
-                        
-                    }
-                }
-
-                //else {response.Message;}
-
-                return false;
-            },
-            error: function(httpObj)
-            {
-                new PNotify({
-                    title: 'Error',
-                    text: httpObj.statusText ,
-                    type: 'error',
-                    styling: 'bootstrap3'
-                });
-            }
-
-        });
-
-
-
-    }
+   
     var reader1  = new FileReader();
     var reader2  = new FileReader();
     var reader3  = new FileReader();
@@ -1469,7 +1365,7 @@
             // set isStepValid = false if has errors
             showDoctorInfo();
             showApppointmentSummary();
-            savePatientPharmacy();
+            savePatientPharmacy('@SessionHandler.UserInfo.Id');
 
         }
         if( stepnumber== 4){
