same allergy,medication,condition api error in pnotify, and spinner feature on each db operation.

--- a/WebApp/Views/SeeDoctor/PartialViewSurgery.cshtml
+++ b/WebApp/Views/SeeDoctor/PartialViewSurgery.cshtml
@@ -144,13 +144,13 @@
                             //Reload container
                             if (result.Message != undefined)
                             {
-                                new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                                new PNotify({ title: 'Error', text: result.Message, type: 'error', styling: 'bootstrap3' });
                                 hideLoader();
                             }
                             else
                             {
                                 //reloadContainer(function () {
-                                new PNotify({ title: 'Success', text: "Surgery is deleted successfully.", type: 'success', styling: 'bootstrap3' });
+                                new PNotify({ title: 'Success', text: "Surgery is deleted successfully.",  type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                                 //Stop displaying loader
                                 hideLoader();
                                 //});
@@ -189,13 +189,13 @@
                     //Reload container
                     if (result.Message != undefined)
                     {
-                        new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                        new PNotify({ title: 'Error', text: result.Message, type: 'error', styling: 'bootstrap3' });
                         hideLoader();
                     }
                     else
                     {
                         //reloadContainer(function () {
-                        new PNotify({ title: 'Success', text: "Surgery is added successfully.", type: 'success', styling: 'bootstrap3' });
+                        new PNotify({ title: 'Success', text: "Surgery is added successfully.",  type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         reloadSurgeries(function () {
                             //Stop displaying loader
                           
