--- a/WebApp/Views/SeeDoctor/SearchPharmacyView.cshtml
+++ b/WebApp/Views/SeeDoctor/SearchPharmacyView.cshtml
@@ -85,6 +85,7 @@ else
 
             $("#divPharmacyResultContainer").show();
             $('#mdlPharmacy').modal('hide');
+            savePatientPharmacy('@SessionHandler.UserInfo.Id');
         });
 
     });
